# insuranceAPI

./: .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yaml  pyproject.toml
src/api/: lifespan.py  main.py
src/api/routers/: insurance_handlers.py  tariff_handlers.py
src/common/converters/: converter.py
src/common/filters/: filters.py
src/common/settings/: settings.py
src/domain/entitites/: base.py  insurance_entities.py  tariff_entities.py
src/domain/schemas/: tariff_schemas.py
src/infra/alembic/: env.py
src/infra/alembic/versions/: c2c2a5d1f591_create_tariff_models.py
src/infra/db/: db.py
src/infra/message_broker/: base.py  kafka.py
src/infra/models/: base.py  insurance_models.py
src/infra/repository/: base.py  insurance_repository.py
src/logic/: container.py
src/logic/comands/: base.py  commands.py
src/logic/events/: base.py  events.py
src/logic/mediator/: base.py  command.py  event.py  query.py
src/logic/other/: user_service.py
src/logic/query/: base.py  queries.py
