[tool.poetry]
name = "insuranceapi"
version = "0.1.0"
description = ""
authors = ["defaultftxuser <banginlord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
asyncpg = "^0.30.0"
orjson = "^3.10.11"
alembic = "^1.14.0"
aiokafka = "^0.12.0"
fastapi = {extras = ["all"], version = "^0.115.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
